--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,7 @@
 <%- include('_layouts/head') %> <%- include('_layouts/header') %>
 
 <div class="container">
-  <h1>Home page</h1>
+  <h1>Admin page</h1>
 </div>
 
 <%- include('_layouts/footer') %>
