--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,5 +1,4 @@
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="#">Navbar</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -14,34 +13,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#"
+        <a class="nav-link" href="/"
           >Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          id="navbarDropdownMenuLink-333"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-          >Dropdown
-        </a>
-        <div
-          class="dropdown-menu dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333"
-        >
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <a class="nav-link" href="/admin">admin</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons">
