--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,7 @@
-<%- include('_layouts/head') %> <%- include('_layouts/header') %>
+<%- include('_layouts/admin-head') %> <%- include('_layouts/admin-header') %>
 
-<div class="container">
+<div class="container mt-5">
   <h1>Admin page</h1>
 </div>
 
-<%- include('_layouts/footer') %>
+<%- include('_layouts/admin-footer') %>
