--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('_layouts/head') %> <%- include('_layouts/header') %>
 
-<div class="container">
+<div class="container mt-5">
   <h1>Home page</h1>
 </div>
 
