--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -3,6 +3,34 @@
 
 <div class="container mt-5">
   <h2 class="page-title">All pages here</h2>
+
+  <a href="/admin/add-page" class="btn btn-secondary">Add new page</a>
+
+  <table class="table mt-5">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Edit</th>
+        <th>Delete</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% if (pages) { %>
+        <% pages.forEach(function(page) { %>
+          <tr>
+            <td><%= page.title %></td>
+            <td><a href="/admin/pages/edit-page/<%= page.slug %>">Edit</a></td>
+            <% if (page.slug == "home") { %>
+              <td></td>
+            <% } else { %>
+              <td><a href="/admin/pages/delete-page/<%= page._id %>">Delete</a></td>
+            <% } %>
+          </tr>
+        <% }) %>
+      <% } %>
+    </tbody>
+  </table>
 </div>
 
 <%- include('../_layouts/admin-footer') %>
