Added sorting and saving results to db

--- a/views/admin/add-page.ejs
+++ b/views/admin/add-page.ejs
@@ -13,7 +13,7 @@
   <% } %>
 
   <h2 class="page-title">Add a page</h2>
-  <a href="/admin/" class="btn btn-secondary">Back to all pages</a>
+  <a href="/admin/pages" class="btn btn-secondary">Back to all pages</a>
 
   <form class="mt-2" method="post" action="/admin/add-page">
     <div class="form-group">
