Added edit page functionality

--- a/views/admin/edit-page.ejs
+++ b/views/admin/edit-page.ejs
@@ -19,6 +19,7 @@
     <div class="form-group">
       <label for="exampleInputEmail1">Title</label>
       <input
+        value="<%= title %>"
         type="text"
         name="title"
         class="form-control"
