Added adding and editing page content

--- a/views/admin/add-page.ejs
+++ b/views/admin/add-page.ejs
@@ -37,8 +37,7 @@
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Content</label>
-      <textarea class="form-control" name="content" placeholder="Page content">
-      </textarea>
+      <textarea class="form-control" name="content" placeholder="Page content"></textarea>
     </div>
     <button type="submit" class="btn btn-secondary">Add a page</button>
   </form>
