--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -2,9 +2,10 @@
 %>
 
 <div class="container mt-5">
-  <h2 class="page-title">All pages here</h2>
-
-  <a href="/admin/add-page" class="btn btn-secondary">Add new page</a>
+  <div class="top_title_wrap">
+    <h2 class="page-title">All pages here</h2>
+    <a href="/admin/add-page" class="btn btn-secondary">Add new page</a>
+  </div>
 
   <table class="table mt-5">
     <thead>
