--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -1,5 +1,5 @@
 <% Object.keys(messages).forEach(function (type) { %>
-  <div class="alert alert-<%= type %>">
+  <div class="alert alert-<%= type %> mt-5">
     <% messages[type].forEach(function (message) { %>
       <%= message %>
     <% }) %>
