--- a/views/_layouts/admin-head.ejs
+++ b/views/_layouts/admin-head.ejs
@@ -10,5 +10,6 @@
     <title><%= title %></title>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
   </head>
   <body>
