--- a/views/admin/add-page.ejs
+++ b/views/admin/add-page.ejs
@@ -16,7 +16,7 @@
 
   <form class="mt-2" method="post" action="/admin/add-page">
     <div class="form-group">
-      <label for="exampleInputEmail1">Title</label>
+      <label>Title</label>
       <input
         type="text"
         name="title"
@@ -25,7 +25,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Slug</label>
+      <label>Slug</label>
       <input
         value="<%= slug %>"
         type="text"
@@ -35,8 +35,9 @@
       />
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Content</label>
+      <label>Content</label>
       <textarea
+        id="content_area"
         class="form-control"
         name="content"
         placeholder="Page content"
