--- a/views/admin/edit-page.ejs
+++ b/views/admin/edit-page.ejs
@@ -42,7 +42,7 @@
     </div>
     <div class="form-group">
       <label for="content">Content</label>
-      <textarea id="content" class="form-control" name="content" placeholder="Page content"><%= content %></textarea>
+      <textarea id="content_area" class="form-control" name="content" placeholder="Page content"><%= content %></textarea>
     </div>
     <input
       value="<%= id %>"
