--- a/views/_layouts/admin-header.ejs
+++ b/views/_layouts/admin-header.ejs
@@ -12,21 +12,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/"
-          >Home
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin"
-          >Admin
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/add-page">Add a page</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="/admin/pages">Pages</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/categories">Categories</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons">
